<resources>
    <string name="app_name">BtSPPDemo</string>
    <string name="client">Client</string>
    <string name="server">Server</string>
    <string name="bluetooth_disabled">Bluetooth disabled</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_enabled">Bluetooth enabled</string>
    <string name="bluetooth_turning_on">Bluetooth turning on</string>
    <string name="bluetooth_turning_off">Bluetooth turning off</string>
    <string name="bluetooth_not_available">Bluetooth not available</string>
    <string name="bluetooth_not_supported">Bluetooth not supported</string>
    <string name="connect_bt">Connect bt</string>
    <string name="manual">Manual</string>
    <string name="auto">Auto</string>
    <string name="disconnected">Disconnected</string>
    <string name="uuid_client">UUID client</string>
    <string name="uuid_server">UUID server</string>
    <string name="default_uuid">00001101&#45;0000&#45;1000&#45;8000&#45;00805F9B34FB</string>
    <string name="connect_to">"Connect to "</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="title_other_devices">Other available devices</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="no_devices_paired">No devices paired</string>
    <string name="select_device">Select device</string>
    <string name="no_devices_found">No Devices Found</string>
    <string name="input_here">Input here</string>
    <string name="data_received">"Data received "</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="seven">7</string>
    <string name="zero_or_seven">0/7</string>
    <string name="clear">Clear</string>
    <string name="echo">Echo</string>
    <string name="hex">Hex</string>
    <string name="data_check">Check</string>
    <string name="data_to_send">"Send data "</string>
    <string name="zero_to_six">0123456</string>
    <string name="count">Count</string>
    <string name="loop_times">Loop times</string>
    <string name="interval_ms">Interval(ms)</string>
    <string name="two_hundred">200</string>
    <string name="hundred">100</string>
    <string name="default_str">Default</string>
    <string name="send">Send</string>
    <string name="clear_test_log">Clear test log</string>
    <string name="test_times">Test times</string>
    <string name="bluetooth_client">Bt client</string>
    <string name="bluetooth_server">Bt server</string>
    <string name="device_list">Device list</string>
    <string name="input_mac_address">Input MAC address</string>
</resources>