<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/bt_status">

    <LinearLayout
        android:id="@+id/data_send_box"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@+id/data_to_send"
            android:text="@string/data_to_send" />

        <EditText
            android:id="@+id/data_to_send"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_here"
            android:singleLine="true"
            android:text="@string/zero_to_six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/data_send_box">

        <Button
            android:id="@+id/send_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:text="@string/clear"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/send_default"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:singleLine="true"
            android:text="@string/default_str"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/send"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:onClick="onClick"
            android:text="@string/send"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>
